# qr-code-generator-api14c488c8-d8c7-474b-a9e2-abeaed7825ac

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: create_user_service.py  generate_qr_code_service.py  get_user_preferences_service.py  server.py  update_user_preferences_service.py  user_login_service.py
